added image to about me and updated readme format with demo image

--- a/index.html
+++ b/index.html
@@ -1,99 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Enter your description here" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- title starts here -->
+    <title>Anthony Bergen | Software Engineer</title>
+    <!-- title ends here -->
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="Description" content="Enter your description here">
-  <link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <!-- title starts here -->
-  <title>Anthony Bergen | Software Engineer</title>
-  <!-- title ends here -->
-</head>
-
-<body>
-  <header>
-
-    <!-- navbar starts here -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="https://adbergen.github.io/responsiveness-portfolio/"><strong>Anthony
-            Bergen</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <!-- navbar links start here -->
-            <a class="nav-item nav-link ml-auto active" href="index.html">About</a>
-            <a class="nav-item nav-link ml-auto" href="assets/html/portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link ml-auto" href="assets/html/contact.html">Contact</a>
-            <a class="nav-item nav-link ml-auto" id="github-mark" href="https://github.com/adbergen" target="_blank">
-              <img class="img-fluid" src="assets/images/github-mark/github-mark-32px.png" alt="github mark icon">
-            </a>
-            <a class="nav-item nav-link ml-auto" id="linkedin" href="https://linkedin.com/in/anthonybergen"
-              target="_blank">
-              <img class="img-fluid" src="assets/images/linkedin/linkedin.png" alt="linkedin icon">
-            </a>
-            <!-- navbar links end here -->
+  <body>
+    <header>
+      <!-- navbar starts here -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand"
+            href="https://adbergen.github.io/responsiveness-portfolio/"
+            ><strong>Anthony Bergen</strong></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <!-- navbar links start here -->
+              <a class="nav-item nav-link ml-auto active" href="index.html"
+                >About</a
+              >
+              <a
+                class="nav-item nav-link ml-auto"
+                href="assets/html/portfolio.html"
+                >Portfolio</a
+              >
+              <a
+                class="nav-item nav-link ml-auto"
+                href="assets/html/contact.html"
+                >Contact</a
+              >
+              <a
+                class="nav-item nav-link ml-auto"
+                id="github-mark"
+                href="https://github.com/adbergen"
+                target="_blank"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/github-mark/github-mark-32px.png"
+                  alt="github mark icon"
+                />
+              </a>
+              <a
+                class="nav-item nav-link ml-auto"
+                id="linkedin"
+                href="https://linkedin.com/in/anthonybergen"
+                target="_blank"
+              >
+                <img
+                  class="img-fluid"
+                  src="assets/images/linkedin/linkedin.png"
+                  alt="linkedin icon"
+                />
+              </a>
+              <!-- navbar links end here -->
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
-  <!-- navbar ends here -->
+      </nav>
+    </header>
+    <!-- navbar ends here -->
 
-  <!-- main/about starts here -->
-  <main class="container-fluid text-center mt-3 mb-5">
-    <div class="row pb-5">
-      <div class="col-sm-4">
-      </div>
-      <div class="col-sm-4">
-        <!-- article starts here -->
-        <article class="card border border-dark">
-          <h2 class="card-title pt-4">About</h2>
-          <hr>
-          <img class="img-fluid rounded-circle p-3 mx-auto"
-            src="https://media-exp1.licdn.com/dms/image/C4E03AQHP4f3U4McQZw/profile-displayphoto-shrink_200_200/0?e=1600905600&v=beta&t=97a49gcaRYvp-vtT2CuWY1fF0eI5KSPFbIOoDlyoC4k"
-            alt="image of Anthony Bergen">
-          <div class="card-body">
-            <div class="card-text">Anthony Bergen is a software engineer proficient in front-end and back-end web
-              development.
+    <!-- main/about starts here -->
+    <main class="container-fluid text-center mt-3 mb-5">
+      <div class="row pb-5">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+          <!-- article starts here -->
+          <article class="card border border-dark">
+            <h2 class="card-title pt-4">About</h2>
+            <hr />
+            <img
+              width="250"
+              height="300"
+              class="img-fluid rounded p-2 mx-auto"
+              src="assets/images/profile.webp"
+              alt="image of Anthony Bergen"
+            />
+            <div class="card-body">
+              <div class="card-text">
+                Anthony Bergen is a software engineer proficient in front-end
+                and back-end web development.
+              </div>
+              <div class="card-text p-2">
+                He has over ten years of executive sales and managerial
+                experience, across a diverse list of industries including
+                cybersecurity, instrumentation engineering and automation,
+                telecommunications, and logistics.
+              </div>
             </div>
-            <div class="card-text p-2">
-              He has over ten years of executive sales and managerial experience, across a diverse
-              list of industries including cybersecurity, instrumentation engineering and automation,
-              telecommunications, and logistics.
-            </div>
-          </div>
-        </article>
-        <!-- article ends here -->
+          </article>
+          <!-- article ends here -->
+        </div>
+        <div class="col-sm-4"></div>
       </div>
-      <div class="col-sm-4">
+    </main>
+    <!-- main/about ends here -->
+
+    <!-- footer starts here -->
+    <footer class="page-footer footer-expand fixed-bottom">
+      <div class="text-center py-2 bg-primary">
+        <strong>| Created by Anthony Bergen |</strong>
       </div>
-    </div>
-  </main>
-  <!-- main/about ends here -->
+    </footer>
+    <!-- footer ends here -->
 
-  <!-- footer starts here -->
-  <footer class="page-footer footer-expand fixed-bottom">
-    <div class="text-center py-2 bg-primary"><strong>| Created by Anthony Bergen |</strong>
-    </div>
-  </footer>
-  <!-- footer ends here -->
-
-  <!-- scripts starts here -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <!-- scripts end here -->
-
-</body>
-
+    <!-- scripts starts here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- scripts end here -->
+  </body>
 </html>
